# codeql-snapshot

./: .gitignore  LICENSE  pyproject.toml
codeql_snapshot/: alembic.ini  cli.py  codeql-snapshot.py
codeql_snapshot/commands/: add.py  analyze.py  build.py  delete.py  get-object.py  init.py  list.py
codeql_snapshot/database_migrations/: env.py
codeql_snapshot/database_migrations/versions/: 4150dd4a2263_add_snapshot_label.py  7af914c0b3be_nullable_label.py  a68386d78f54_add_snapshot_labels.py  abb9363cd21a.py  d9ae13316a2e_add_snapshot_labels.py  fb615c8abf95_add_category.py
codeql_snapshot/helpers/: codeql.py  hash.py  object_store.py  zip.py
codeql_snapshot/models/: __init__.py  base.py  snapshot.py
database_migrations/versions/: abb9363cd21a_initialize.py
scripts/: build.sh  docker-compose.yml  pgadmin4_servers.json  start_test_minio_server.sh  start_test_services.sh
