[tool.poetry]
name = "codeql-snapshot"
version = "0.1.0"
description = ""
authors = ["Remco Vermeulen <rvermeulen@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "codeql_snapshot"}]

[tool.poetry.scripts]
codeql-snapshot = "codeql_snapshot.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
click = "^8.1.3"
sqlalchemy = {version = "^2.0.0b4", allow-prereleases = true}
minio = "^7.1.12"
psycopg2-binary = "^2.9.5"
beautifultable = "^1.1.0"
semantic-version = "^2.10.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
